# read-buddy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ReadBuddy.spec  build.py  main.py  pyproject.toml
backend/: ai_service.py  app.py  book_service.py  chat_orchestrator.py  database.py  main.py  models.py  paths.py  preferences.py
backend/tools/: __init__.py  accept_book.py  base.py  discuss_book.py  rate_book.py  recommend_books.py  reject_book.py  save_preference.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  books.js  chat.js  settings.js
installer/: setup.iss
tests/: conftest.py  test_book_service_cache.py  test_export_import.py  test_status_machine.py  test_tools_registry.py
todos/: todo_0602_1.md  todo_0602_2.md  todo_0623_1.md
