[project]
name = "read-buddy"
version = "0.1.0"
description = "AI 驱动的书籍阅读记录与推荐工具"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.40.0",
    "python-multipart>=0.0.30",
    "pywebview>=6.2.1",
    "uvicorn>=0.48.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
link-mode = "copy"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
